move app controller to component

--- a/js/components/ImageDetails.html
+++ b/js/components/ImageDetails.html
@@ -1,6 +1,6 @@
 <div class="image-details">
   <div class="image-container">
-    <img ng-src="$ctrl.image.url" />
+    <img ng-src="{{ $ctrl.image.url }}" />
   </div>
   <div class="comments-container">
     <div class="comment-list">
