--- a/js/components/ImageSelector.html
+++ b/js/components/ImageSelector.html
@@ -1,5 +1,5 @@
 <div>
   <div class="image-thumbnail" ng-repeat="image in $ctrl.ImageManager.images">
-    <img ng-src="{{ image.url }}">
+    <img ng-src="{{ image.url }}" ng-click="$ctrl.selectImage(image)">
   </div>
 </div>
