--- a/js/components/ImageDetails.html
+++ b/js/components/ImageDetails.html
@@ -2,7 +2,7 @@
   <div class="image-container">
     <img ng-src="{{ $ctrl.image.url }}" />
   </div>
-  <div class="comments-container">
+  <div class="comments-container" ng-if="$ctrl.image">
     <div class="comment-list">
       <div ng-repeat="comment in $ctrl.image.comments">
         {{ comment }}
@@ -10,7 +10,9 @@
     </div>
     <div>
       <textarea ng-model="$ctrl.pendingComment"></textarea>
-      <button ng-submit="$ctrl.submit()" ng-disabled="!$ctrl.pendingComment"></button>
+      <button ng-click="$ctrl.submit()" ng-disabled="!$ctrl.pendingComment || $ctrl.isSaving">
+        {{ $ctrl.isSaving ? 'Saving...' : 'Comment' }}
+      </button>
     </div>
   </div>
 </div>
