--- a/js/components/ImageDetails.html
+++ b/js/components/ImageDetails.html
@@ -1,8 +1,10 @@
-<div class="image-details">
-  <div class="image-container">
+<div>
+  <h1 ng-if="!$ctrl.image">Please select an image</h1>
+  <div class="image-container" ng-if="$ctrl.image">
     <img ng-src="{{ $ctrl.image.url }}" />
   </div>
   <div class="comments-container" ng-if="$ctrl.image">
+    <h4>Comments</h4>
     <div class="comment-list">
       <div ng-repeat="comment in $ctrl.image.comments">
         {{ comment }}
@@ -10,6 +12,8 @@
     </div>
     <div>
       <textarea ng-model="$ctrl.pendingComment"></textarea>
+    </div>
+    <div>
       <button ng-click="$ctrl.submit()" ng-disabled="!$ctrl.pendingComment || $ctrl.isSaving">
         {{ $ctrl.isSaving ? 'Saving...' : 'Comment' }}
       </button>
