more angular conversion

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
-  <image-selector></image-selector>
-  <image-details></image-details>
+  <app-image-selector></app-image-selector>
+  <app-image-details></app-image-details>
 </div>
